--- a/app/modules/default/views/scripts/error/404.phtml
+++ b/app/modules/default/views/scripts/error/404.phtml
@@ -1,14 +1,5 @@
-<style>
-    .error-404 {
-        background: url(<?php echo $this->baseUrl('theme/default/images/404.jpeg')?>) left center no-repeat;
-        margin: 30px auto;
-        width: 960px;
-        border: 10px solid #f3f3f3;
-        padding: 60px 0px;
-        text-align: center;
-    }
-</style>
-<div class="error-404">
-  <h1>ERROR 404: <?php echo $this->message ?></h1>
-</div>
-
+<p><strong>Error 404: <?php echo $this->message ?></strong></p>
+<p>
+    Запрошенный ресурс/адрес не существует<br/>
+    <a>Перейти на предыдущую страницу</a>
+</p>
