--- a/app/layouts/core/empty.phtml
+++ b/app/layouts/core/empty.phtml
@@ -9,21 +9,28 @@
 ?>
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-	<head>
-		<?php echo $this->headMeta();?>
-		<?php echo $this->headTitle(); ?>
-		<?php print $this->headLink();?>
-	</head>
-    <body class="hm" style="position: relative">
-    <div id="header">
-        <h1>
+<head>
+    <?php echo $this->headMeta();?>
+    <?php echo $this->headTitle(); ?>
+    <?php print $this->headLink();?>
+    <?php print $this->headScript();?>
+    <style type="text/css">
+    </style>
+    <script type="text/javascript">
+        var domain = '<?php echo $this->baseUrl();?>';
+    </script>
+</head>
+<base href="<?php //echo $this->baseUrl(); ?>" />
+<body style="background: #5F99D3">
+<div class="container">
+    <div class="well" style="margin: 10% auto 0; width: 300px; background-color: #F5FAFF;">
+        <p style="margin-bottom: 30px">
             <a href="<?php echo $this->baseUrl(); ?>">
                 <img src="<?php echo $this->baseUrl('theme/default/images/logo.jpg')?>"/>
             </a>
-        </h1>
-    </div>
-    <div class="container">
+        </p>
         <?php echo $this->layout()->content; ?>
     </div>
-	</body>
+</div>
+</body>
 </html>
