--- a/app/modules/default/views/scripts/error/403.phtml
+++ b/app/modules/default/views/scripts/error/403.phtml
@@ -3,7 +3,7 @@
     У вашего аккаунта отсутствуют права на просмотр или редактирование запрошенного ресурса.
 </p>
 <p>
-    За соответствующими правами обратитесь к администратору системы или администратору компании-партнера<br/>
+    За соответствующими правами обратитесь к администраторам системы или компании-партнера<br/>
 </p>
 <?php if(!HM_Model_Account_Auth::getInstance()->isAuth()): ?>
 <a href="<?=$this->baseUrl('account/access/login');?>">Авторизоваться</a>
