--- a/app/modules/default/views/scripts/error/404.phtml
+++ b/app/modules/default/views/scripts/error/404.phtml
@@ -1,5 +1,4 @@
-<p><strong>Error 404: <?php echo $this->message ?></strong></p>
+<p><strong>Oops! 404: <?php echo $this->message ?></strong></p>
 <p>
-    Запрошенный ресурс/адрес не существует<br/>
-    <a>Перейти на предыдущую страницу</a>
+    Запрошенный ресурс или адрес не существует. За дополнительной информацией обратитесь к администраторам системы.
 </p>
