--- a/public/theme/default/css/template.css
+++ b/public/theme/default/css/template.css
@@ -147,7 +147,7 @@ body {
     top: 0;
     background: transparent;
 }
-#messenger span {
+#messenger p {
     display: block;
     position: relative;
     width: 350px;
