--- a/public/theme/default/css/template.css
+++ b/public/theme/default/css/template.css
@@ -140,6 +140,20 @@ body {
     padding: 25px 0px;
 }
 
+.loader {
+    /*position: absolute;*/
+    position: absolute;
+    z-index: 9999;
+    left:0;
+    top: 0;
+    background: #fff url("../images/ajax-loader.gif") center center no-repeat;
+    opacity: 0.6;
+    filter: alpha(Opacity=60);
+    visibility: visible;
+    display: block;
+
+}
+
 #messenger {
     width: 100%;
     position: fixed;
