--- a/public/theme/default/css/template.css
+++ b/public/theme/default/css/template.css
@@ -150,10 +150,10 @@ body {
     background: #008000 url("../images/ajax-loader.gif") center center no-repeat;
     opacity: 0.6;
     filter: alpha(Opacity=60);
-    visibility: visible;
     display: block;
 
 }
+
 
 #messenger {
     width: 100%;
@@ -166,14 +166,24 @@ body {
     display: block;
     position: relative;
     width: 350px;
-    margin: auto;
+    margin: 5px auto 0;
     text-align: center;
-    padding: 10px 0;
+    padding: 8px 0;
     background: #FFFFCC;
-    border-left: 1px solid #FFCC00;
-    border-bottom: 1px solid #FFCC00;
-    border-right: 1px solid #FFCC00;
+    border: 1px solid #FFCC00;
+    color: #666666;
+}
+
+#messenger .status {
+    display: block;
+    text-align: center;
     font-weight: bold;
+    color: #666666;
+}
+
+#messenger .message {
+    display: block;
+    text-align: center;
     color: #666666;
 }
 
